--- a/test.env
+++ b/test.env
@@ -1,8 +1,8 @@
 DJANGO_SETTINGS_MODULE=settings
-APP_ID=muzibluewhale
-APP_TOKEN=KBu0b17Pxtts66hHzRLC9oA1TIoOxnk5uJ9W
-BKPAAS_APP_ID=muzibluewhale
-BKPAAS_APP_SECRET=KBu0b17Pxtts66hHzRLC9oA1TIoOxnk5uJ9W
+APP_ID=muziwechat
+APP_TOKEN=q5qAvdtChHWQJOuJ2C0THHnFg8bTBiM1RgNK
+BKPAAS_APP_ID=muziwechat
+BKPAAS_APP_SECRET=q5qAvdtChHWQJOuJ2C0THHnFg8bTBiM1RgNK
 BKPAAS_ENGINE_REGION=default
 BKPAAS_LOGIN_URL=https://ce.bktencent.com/login/
 BKPAAS_DEPLOY_MODULE=default
